--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "node-rest-client": "^3.1.0",
     "node-restful": "^0.2.6",
     "nodemailer": "^5.1.1",
+    "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^1.12.1",
     "pdfkit": "^0.8.3",
     "pg": "^7.9.0",
